# cosmetics

./: Cargo.toml  README.md
examples/: flex-row-dnd.rs  gif-player.rs  image-container.rs  range-slider.rs  scrubber.rs  spinner.rs  styled-text-renderer.rs  toggle.rs
src/: lib.rs
src/styled_text_renderer/: compose.rs  mod.rs  raster.rs  shadow.rs  style.rs
src/widgets/: mod.rs
src/widgets/flex_row/: mod.rs  widget.rs
src/widgets/gif_player/: mod.rs  widget.rs
src/widgets/image_container/: mod.rs  rounded_primitive.rs  threaded_loader.rs  widget.rs
src/widgets/range_slider/: mod.rs  widget.rs
src/widgets/scrubber/: mod.rs  widget.rs
src/widgets/spinner/: mod.rs  widget.rs
src/widgets/toggle/: mod.rs  widget.rs
