[package]
name = "cosmetics"
version = "0.1.0"
edition = "2024"

[features]
default = []
gif-player = ["dep:image_crate"]
image-container = ["dep:bytemuck", "dep:tokio", "dep:image_crate", "dep:iced_wgpu", "dep:libblur"]
styled-text-renderer = ["dep:image_crate", "dep:libblur", "dep:cosmic-text"]

[dependencies]
num-traits = "0.2"
libblur = { version = "0.23", optional = true }

[dependencies.bytemuck]
version = "1"
features = ["derive"]
optional = true

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread"]
optional = true

[dependencies.image_crate]
package = "image"
version = "0.25"
default-features = false
features = ["png", "jpeg", "gif"]
optional = true

[dependencies.iced_wgpu]
git = "https://github.com/pop-os/libcosmic"
package = "iced_wgpu"
optional = true

[dependencies.cosmic-text]
git = "https://github.com/pop-os/cosmic-text.git"
optional = true

[[example]]
name = "gif-player"
required-features = ["gif-player"]

[[example]]
name = "image-container"
required-features = ["image-container"]

[[example]]
name = "styled-text-renderer"
required-features = ["styled-text-renderer"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic"
features = [
  "dbus-config",
  "tokio",
  "winit",
  "wayland",
  "wgpu",
]
